[gd_scene load_steps=6 format=3 uid="uid://dshw5oi7bl6y"]

[ext_resource type="Script" path="res://Player/Attack/bow.gd" id="1_tfn3a"]
[ext_resource type="Texture2D" uid="uid://d4mgu1wr8jf6l" path="res://Textures/Items/Weapons/Light Bow_1.png" id="1_tuejt"]

[sub_resource type="Animation" id="Animation_u10xx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ie61y"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_37pjk"]
_data = {
"RESET": SubResource("Animation_u10xx"),
"shoot": SubResource("Animation_ie61y")
}

[node name="Bow" type="Node2D"]
script = ExtResource("1_tfn3a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 2
position = Vector2(-10, -10)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_tuejt")
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_37pjk")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
